# ring-all-reduce

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: dataset.hpp  shallow_nn.hpp
include/distributed/: coordinator.hpp  protocol.hpp  serialization.hpp  socket.hpp  worker_registration.hpp
include/ml/: dataset.hpp  shallow_nn.hpp
src/: dataset.cpp  shallow_nn.cpp  train_main.cpp
src/data/: sample.csv
src/distributed/: protocol.cpp  serialization.cpp  socket.cpp
src/ml/: dataset.cpp  shallow_nn.cpp
tests/distributed/: test_protocol.cpp  test_serialization.cpp
